# linux-c-boilerplate

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  TC-mingw.cmake  init.sh  readme.md
apps/: CMakeLists.txt
apps/___PROJECTNAME____server/: CMakeLists.txt
apps/___PROJECTNAME____server/config/: cfg.c
apps/___PROJECTNAME____server/core/: app.c  app.h
apps/___PROJECTNAME____server/util/: sock.c  sock.h  util.c
apps/___PROJECTNAME____testapp/: CMakeLists.txt  main.c
apps/bp_server/: CMakeLists.txt
apps/bp_server/config/: cfg.c  cfg.h  sample.h
apps/bp_server/core/: app.c  app.h  main.c  server.c
apps/bp_server/netutil/: netutil.c  netutil.h  sock.c  sock.h
apps/bp_server/socket/: sock.h
apps/bp_server/util/: log.h  util.c  util.h
apps/testapp/: CMakeLists.txt  log.h  main.c
boilerplate_apps/: CMakeLists.txt
boilerplate_apps/linktest/: linktest.c
boilerplate_apps/misc/: sig0.c  thread.c
boilerplate_apps/udpserver/: CMakeLists.txt
boilerplate_apps/udpserver/config/: cfg.c  cfg.h
boilerplate_apps/udpserver/core/: app.c  app.h  server.c  server.h
boilerplate_apps/udpserver/util/: log.h  sock.c  util.c  util.h
ext/iniparser/: CMakeLists.txt  LICENSE  dictionary.c  dictionary.h  iniparser.c  iniparser.h
include/: ___PROJECTNAME___.h  boilerplatelib.h  piapi.h
include/bp/: bp.h
include/piapi/: pi_mmap.h  pi_sock.h  pi_thread.h  piapi.h
lib/: CMakeLists.txt  ___PROJECTNAME___.c  ___PROJECTNAME____log.h  boilerplatelib.c  boilerplatelib_log.h
lib/bp/: CMakeLists.txt  bp.c  bp_log.h
lib/piapi/: CMakeLists.txt  pi_mmap.c  pi_sock.c  pi_thread.c  piapi.c
lib/platform/: CMakeLists.txt
ref-apps/: CMakeLists.txt
ref-apps/dgram/: client.c
ref-apps/mmap/: CMakeLists.txt  mmap.c
ref-apps/piapi/: CMakeLists.txt
ref-apps/piapi/dgram/: CMakeLists.txt  client.c  server.c
ref-apps/piapi/mmap/: mmap.c
ref-apps/piapi/mutex/: CMakeLists.txt  mutex.c
ref-apps/piapi/tcp/: CMakeLists.txt  tcptest.c
ref-apps/piapi/thread/: CMakeLists.txt  thread.c
ref-apps/timer/: CMakeLists.txt  main.c
scripts/: app.cfg  clean.sh  client_exe.sh  compile.sh  server_exe.sh  winclean.sh  wincompile.sh
scripts/boilerplate_server/: client.cfg  client_exe.sh  server_exe.sh
test/: CMakeLists.txt
test/tcptest/: CMakeLists.txt  tcptest.c
test/test1/: CMakeLists.txt
test/test2/: CMakeLists.txt
test/udptest/: CMakeLists.txt  udptest.c
